--- a/templates/report.html
+++ b/templates/report.html
@@ -209,7 +209,7 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script>
         // Global variables
         let currentTab = 'lost';
